# dinfox-dmm

./: .cproject  .gitmodules  .project  CMakeLists.txt  README.md  readme.md
.github/matrices/: cmake-flags.json
application/inc/: dmm_flags.h  error.h  error_base.h  mode.h
application/src/: main.c
drivers/components/inc/: led.h  sh1106.h  sh1106_driver_flags.h
drivers/components/src/: led.c  r4s8cr_hw.c  sh1106.c  sh1106_hw.c
drivers/mac/src/: lmac_hw.c
drivers/peripherals/inc/: gpio_mapping.h  i2c_address.h  lpuart.h  mcu_mapping.h  nvic_priority.h  nvm.h  nvm_address.h  rtc.h  stm32l0xx_drivers_flags.h  tim.h
drivers/peripherals/src/: adc.c  gpio_mapping.c  lpuart.c  mapping.c  mcu_mapping.c  tim.c
drivers/registers/inc/: stm32l0xx_registers_flags.h
drivers/utils/inc/: embedded_utils_flags.h  font.h  logo.h  terminal_instance.h
drivers/utils/src/: font.c  logo.c
inc/: mode.h
inc/applicative/: dinfox.h  dmm.h  error.h  hmi.h
inc/components/: led.h  power.h  rs485.h  rs485_common.h  sh1106.h
inc/nodes/: at.h  at_bus.h  bpsm.h  common.h  ddrm.h  dinfox.h  dmm.h  gpsm.h  lbus.h  lvrm.h  mpmcm.h  node.h  node_common.h  node_status.h  r4s8cr.h  sm.h  uhfm.h  xm.h
inc/peripherals/: adc.h  exti.h  flash.h  i2c.h  iwdg.h  lptim.h  lpuart.h  mapping.h  nvic.h  nvm.h  rcc.h  rtc.h  tim.h
inc/utils/: font.h  logo.h  math.h  parser.h  string.h
linker/: dmm_hw1-0.ld
middleware/analog/inc/: analog.h
middleware/analog/src/: analog.c
middleware/hmi/inc/: hmi.h  hmi_bcm.h  hmi_bpsm.h  hmi_common.h  hmi_ddrm.h  hmi_dmm.h  hmi_gpsm.h  hmi_lvrm.h  hmi_mpmcm.h  hmi_node.h  hmi_r4s8cr.h  hmi_sm.h  hmi_uhfm.h
middleware/hmi/src/: hmi.c  hmi_bcm.c  hmi_bpsm.c  hmi_ddrm.c  hmi_dmm.c  hmi_gpsm.c  hmi_lvrm.c  hmi_mpmcm.c  hmi_node.c  hmi_r4s8cr.c  hmi_sm.c  hmi_uhfm.c
middleware/node/inc/: bpsm.h  common.h  ddrm.h  dinfox_registers_flags.h  dmm.h  gpsm.h  mpmcm.h  node.h  r4s8cr.h  sm.h  uhfm.h  una_at_flags.h  una_dmm.h  una_lib_flags.h  una_r4s8cr_flags.h  xm.h
middleware/node/src/: bpsm.c  common.c  ddrm.c  dmm.c  gpsm.c  lbus.c  lvrm.c  mpmcm.c  node.c  r4s8cr.c  sm.c  uhfm.c  una_dmm.c
middleware/power/inc/: power.h
middleware/power/src/: power.c
middleware/radio/inc/: radio.h  radio_bcm.h  radio_bpsm.h  radio_common.h  radio_ddrm.h  radio_dmm.h  radio_gpsm.h  radio_lvrm.h  radio_mpmcm.h  radio_r4s8cr.h  radio_sm.h  radio_uhfm.h
middleware/radio/src/: radio.c  radio_bcm.c  radio_bpsm.c  radio_common.c  radio_ddrm.c  radio_dmm.c  radio_gpsm.c  radio_lvrm.c  radio_mpmcm.c  radio_r4s8cr.c  radio_sm.c  radio_uhfm.c
script/: DMM_HW1-0_Debug.launch  DMM_HW1-0_Run.launch  HW1_0.jlink  dmm hw1-0.launch  dmm_hw1-0.jlink  dmm_hw1-0_debug.launch  dmm_hw1-0_run.launch  git_version.sh
src/: main.c
src/applicative/: hmi.c
src/components/: led.c  power.c  rs485.c  sh1106.c
src/nodes/: at.c  at_bus.c  bpsm.c  common.c  ddrm.c  dinfox.c  dmm.c  gpsm.c  lbus.c  lvrm.c  mpmcm.c  node.c  r4s8cr.c  sm.c  uhfm.c  xm.c
src/peripherals/: adc.c  exti.c  gpio.c  i2c.c  lptim.c  lpuart.c  mapping.c  rcc.c  rtc.c  tim.c
src/utils/: math.c  string.c
startup/: dmm_startup.c
